intento de carpeta

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,20 +1,27 @@
+
 #################################################
 # Base image for the build container
 #################################################
 FROM --platform=linux/amd64 ubuntu:jammy
-FROM  maven:3.9.6-eclipse-temurin-17 as builder
+FROM  maven:3.9.6-eclipse-temurin-21 as builder
+
+ARG  POM_FILE
+ARG JAR_FILE
+ARG SRC_DIR
+
+
 
 # Sets the working directory for commands to run
 WORKDIR /app
 
 # Copies the project's dependencies
-COPY ../app/pom.xml ./pom.xml
+COPY $POM_FILE ./pom.xml
 
 # Downloads the project's dependencies
 #RUN mvn clean verify
 
 # Copies the project's code
-COPY ../app/src ./src
+COPY $SRC_DIR ./src
 
 # Compiles the project
 RUN mvn clean package -DskipTests=true
@@ -26,9 +33,15 @@ RUN mvn clean package -DskipTests=true
 #################################################
 FROM openjdk:21-jdk-slim AS runtime
 
+ARG POM_FILE
+ARG JAR_FILE
+ARG SRC_DIR
+
+
+
 WORKDIR /app
 
-COPY  --from=builder /app/target/TicketEvent-0.0.1-SNAPSHOT.jar app.jar
+COPY  --from=builder $JAR_FILE app.jar
 
 
 
@@ -39,8 +52,3 @@ EXPOSE 8443
 
 # Command to run on docker run
 CMD ["java", "-jar", "app.jar"]
-
-
-
-
-
