--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -5,6 +5,10 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
+      args:
+        - POM_FILE= /pom.xml
+        - JAR_FILE= /target/ticketevent-0.0.1-SNAPSHOT.jar
+        - SRC_DIR= /src
     restart: on-failure
     ports:
       - "8443:8443"
@@ -12,7 +16,6 @@ services:
       - SPRING_DATASOURCE_URL=jdbc:mysql://db:3306/ticketeventaplicacion
       - SPRING_DATASOURCE_USERNAME=root
       - SPRING_DATASOURCE_PASSWORD=papr0bar
-
 
 
   db:
