funciona el docker en carpeta

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -3,25 +3,20 @@
 # Base image for the build container
 #################################################
 FROM --platform=linux/amd64 ubuntu:jammy
-FROM  maven:3.9.6-eclipse-temurin-21 as builder
-
-ARG  POM_FILE
-ARG JAR_FILE
-ARG SRC_DIR
-
+FROM maven:3.9.6-amazoncorretto-21 as builder
 
 
 # Sets the working directory for commands to run
-WORKDIR /app
+WORKDIR /project
 
 # Copies the project's dependencies
-COPY $POM_FILE ./pom.xml
+COPY ../pom.xml /project/
 
 # Downloads the project's dependencies
 #RUN mvn clean verify
 
 # Copies the project's code
-COPY $SRC_DIR ./src
+COPY /src /project/src
 
 # Compiles the project
 RUN mvn clean package -DskipTests=true
@@ -33,15 +28,13 @@ RUN mvn clean package -DskipTests=true
 #################################################
 FROM openjdk:21-jdk-slim AS runtime
 
-ARG POM_FILE
-ARG JAR_FILE
-ARG SRC_DIR
+WORKDIR /usr/src/app/
 
 
 
-WORKDIR /app
 
-COPY  --from=builder $JAR_FILE app.jar
+
+COPY  --from=builder /project/target/TicketEvent-0.0.1-SNAPSHOT.jar /usr/src/app/app.jar
 
 
 
