--- a/frontend/webapp14_2/package.json
+++ b/frontend/webapp14_2/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "^17.3.0",
     "boostrap": "^2.0.0",
     "bootstrap": "^5.3.3",
+    "chart.js": "^4.4.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
