--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,7 +15,7 @@ logging.level.org.springframework.web = DEBUG
 spring.datasource.url = jdbc:mysql://localhost/ticketeventaplicacion?serverTimezone=Europe/Madrid
 spring.datasource.username = root
 spring.datasource.password = papr0bar
-
+pring.mvc.pathmatch.matching-strategy=ANT_PATH_MATCHER
 
 
 
