--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -7,8 +7,8 @@ FROM node:20 AS angular_builder
 WORKDIR /app
 
 # Copy Angular project files
-COPY frontend/webapp14_2/package.json frontend/package-lock.json /app/
-COPY frontend /app
+COPY frontend/webapp14_2/package.json frontend/webapp14_2/package-lock.json /app/
+COPY frontend/webapp14_2 /app
 
 # Install Angular project dependencies
 RUN npm install
@@ -19,16 +19,16 @@ RUN npm run build
 #################################################
 # Base image for the backend build container
 #################################################
-FROM maven:3.9.6-openjdk-16 AS backend_builder
+FROM maven:3.9.6-amazoncorretto-21 AS backend_builder
 
 # Sets the working directory for commands to run
 WORKDIR /project
 
 # Copies the backend project's dependencies
-COPY backend/pom.xml /project/
+COPY /pom.xml /project/
 
 # Copies the backend project's code
-COPY backend/src /project/src
+COPY /src /project/src
 
 # Compiles the backend project
 RUN mvn clean package -DskipTests=true
@@ -36,7 +36,7 @@ RUN mvn clean package -DskipTests=true
 #################################################
 # Base image for the application container
 #################################################
-FROM openjdk:16-jdk-slim AS runtime
+FROM openjdk:21-jdk-slim AS runtime
 
 WORKDIR /usr/src/app/
 
@@ -44,7 +44,7 @@ WORKDIR /usr/src/app/
 COPY --from=backend_builder /project/target/TicketEvent-0.0.1-SNAPSHOT.jar /usr/src/app/app.jar
 
 # Copy frontend build
-COPY --from=angular_builder /app/dist/frontend /usr/src/app/frontend
+ COPY --from=angular_builder /app/dist/frontend /usr/src/app/frontend/webapp14_2/
 
 # Indicates the port that the container exposes
 EXPOSE 8443
