--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -19,7 +19,7 @@ RUN npm run build
 #################################################
 # Base image for the backend build container
 #################################################
-FROM maven:3.9.6-amazoncorretto-21 AS backend_builder
+FROM maven:3.9.6-amazoncorretto-21 AS builder
 
 # Sets the working directory for commands to run
 WORKDIR /project
@@ -41,10 +41,11 @@ FROM openjdk:21-jdk-slim AS runtime
 WORKDIR /usr/src/app/
 
 # Copy backend JAR
-COPY --from=backend_builder /project/target/TicketEvent-0.0.1-SNAPSHOT.jar /usr/src/app/app.jar
+#COPY --from=backend_builder /project/target/TicketEvent-0.0.1-SNAPSHOT.jar /usr/src/app/app.jar
+COPY --from=builder /project/target/TicketEvent-0.0.1-SNAPSHOT.jar /usr/src/app/app.jar
 
 # Copy frontend build
- COPY --from=angular_builder /app/dist/frontend /usr/src/app/frontend/webapp14_2/
+ #COPY --from=angular_builder /app/dist/frontend /usr/src/app/frontend/webapp14_2/
 
 # Indicates the port that the container exposes
 EXPOSE 8443
